# gtktube

./: .gitignore  DESIGN.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
gtktube/: __init__.py  app.py  daemon_executor.py  install_deps.py  models.py  paths.py  sponsorblock.py  update_check.py
gtktube/assets/: apt-packages.txt
gtktube/db/: __init__.py  connection.py  migrations.py  repositories.py
gtktube/extractors/: __init__.py  youtube.py
gtktube/services/: library.py
gtktube/ui/: chrome.py  context_menus.py  main_window.py  player.py  settings.py  sponsorblock.py  styles.py  thumbnails.py  types.py  upgrade.py  video_grid.py
packaging/: gtktube.desktop  local.gtktube.GTKTube.desktop
scripts/: install-apt-deps.sh  install-deps-gui.py
tests/: test_app.py  test_daemon_executor.py  test_database.py  test_install_deps.py  test_library_service.py  test_player.py  test_sponsorblock.py  test_update_check.py  test_version.py  test_youtube_extractor.py
