[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gtktube"
version = "0.1.0"
description = "Local-first GTK4 YouTube subscription browser and player"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = [
    "yt-dlp>=2025.1.15",
    "python-mpv>=1.0.8",
]

[project.scripts]
gtktube = "gtktube.app:main"

[tool.setuptools.packages.find]
include = ["gtktube*"]

[tool.setuptools.package-data]
gtktube = ["assets/gtktube.png"]

[tool.setuptools.data-files]
"share/applications" = ["packaging/gtktube.desktop"]
"share/icons/hicolor/256x256/apps" = ["gtktube/assets/gtktube.png"]
