[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gtktube"
version = "1.9.3"
description = "Local privacy-first Python/GTK4 YouTube player"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = [
    "babel>=2.14",
    "packaging>=24.0",
    "yt-dlp>=2025.1.15",
    "python-mpv>=1.0.8",
    "SecretStorage>=3.3.3",
]

[project.urls]
Homepage = "https://github.com/keredson/gtktube"
Source = "https://github.com/keredson/gtktube"

[project.scripts]
gtktube = "gtktube.app:main"

[tool.setuptools.packages.find]
include = ["gtktube*"]

[tool.setuptools.package-data]
gtktube = ["assets/gtktube.png", "assets/apt-packages.txt"]

[tool.setuptools.data-files]
"share/applications" = ["packaging/local.gtktube.GTKTube.desktop"]
"share/icons/hicolor/256x256/apps" = ["gtktube/assets/gtktube.png"]
